tests/error/array_errors/new_array_check_fail.err
Error: Type mismatch (at $FILE:13:11)
   | 
11 | @guppy(module)
12 | def main() -> int:
13 |     return array(1)
   |            ^^^^^^^^ Expected expression of type `int`, got `array[?T, ?n]`

Guppy compilation failed due to 1 previous error
